--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -21,7 +21,7 @@
         </ui:define>
 
         <ui:define name="left">
-                       <p:panelMenu>
+            <p:panelMenu>
                 <p:submenu label =" WMS HOME" styleClass="display:block">
                     <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
                 </p:submenu>
@@ -54,9 +54,12 @@
                 <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
                     <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
                 </p:submenu>
+                <p:submenu label="Warehouse Service Fulfillment Check" >
+                    <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
+                </p:submenu>
             </p:panelMenu>
         </ui:define>
-        
+
         <ui:define name="right">
             <h:form id="formMain">
                 <p:dataTable id="warehouse" var="warehouse" sortMode="multiple" editable="true" value="#{warehouseViewEditManagedBean.warehouses}" 
