--- a/MerlionPortal/MerlionPortal-war/web/wms/stockauditprocess.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/stockauditprocess.xhtml
@@ -21,7 +21,7 @@
         </ui:define>
 
         <ui:define name="left">
-                      <p:panelMenu>
+            <p:panelMenu>
                 <p:submenu label =" WMS HOME" styleClass="display:block">
                     <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
                 </p:submenu>
@@ -53,6 +53,9 @@
                 </p:submenu>
                 <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
                     <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Service Fulfillment Check" >
+                    <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
                 </p:submenu>
             </p:panelMenu>
         </ui:define>
@@ -115,7 +118,7 @@
                             </p:column>                       
                         </p:row>
 
-                           <p:row>
+                        <p:row>
                             <p:column>
                                 <h:outputLabel for="passQuantity" style="font-weight: bold" value="Pass Quantity: *"  />
                             </p:column>
