--- a/MerlionPortal/MerlionPortal-war/web/wms/viewserviceorderdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewserviceorderdetail.xhtml
@@ -20,7 +20,7 @@
         </ui:define>
 
         <ui:define name="left">
-                      <p:panelMenu>
+            <p:panelMenu>
                 <p:submenu label =" WMS HOME" styleClass="display:block">
                     <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
                 </p:submenu>
@@ -52,6 +52,9 @@
                 </p:submenu>
                 <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
                     <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Service Fulfillment Check" >
+                    <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
                 </p:submenu>
             </p:panelMenu>
         </ui:define>
