po and add in notification-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -39,7 +39,8 @@
                     </c:if>
                     <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                             <p:submenu label="MRP">
-                                <p:menuitem value="Material Requirement Planning" url="forecast.xhtml" />
+                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                                <p:menuitem value="Backorder Request" url="backorder.xhtml" />
                             </p:submenu>
                     </c:if>
 
