--- a/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
@@ -37,9 +37,9 @@
                     </p:submenu>
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
-                    <p:submenu label="MRP">
-                        <p:menuitem value="Material Requirement Planning" url="forecast.xhtml" />
-                    </p:submenu>
+                   <p:submenu label="MRP">
+                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                            </p:submenu>
                 </c:if>
 
             </p:menu>
