--- a/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
@@ -38,7 +38,7 @@
                     </c:if>
                     <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                             <p:submenu label="MRP">
-                                <p:menuitem value="Material Requirement Planning" url="forecast.xhtml" />
+                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
                             </p:submenu>
                     </c:if>
 
