--- a/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
@@ -38,8 +38,8 @@
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="MRP">
-                        <p:menuitem value="Material Requirement Planning" url="forecast.xhtml" />
-                    </p:submenu>
+                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                            </p:submenu>
                 </c:if>
 
             </p:menu>
