--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallnotification.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallnotification.xhtml
@@ -54,6 +54,9 @@
                 <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
                     <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
                 </p:submenu>
+                <p:submenu label="View Notification" >
+                    <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
+                </p:submenu>
             </p:panelMenu>
         </ui:define>
         
