--- a/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
@@ -59,6 +59,9 @@
                 <p:submenu label="Warehouse Service Fulfillment Check" >
                     <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
                 </p:submenu>
+                <p:submenu label="View Notification" >
+                    <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
+                </p:submenu>
             </p:panelMenu>
         </ui:define>
 
