--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltassetschedule.xhtml
@@ -66,7 +66,7 @@
                     <p:menuitem value="View Order Details" url="viewalllog.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Transportation Order" >
-                    <p:menuitem value="Create Log For Order" url="addnewtlog.xhtml" />
+                    <p:menuitem value="Create Log For Order" url="addnewlog.xhtml" />
                 </p:submenu>
                 <p:submenu label="Transportation Request" >
                     <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
